--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/almendra": "^0.2.3",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.45",
     "expo": "~50.0.14",
+    "expo-font": "^11.10.3",
     "expo-status-bar": "~1.11.1",
     "json-server": "^1.0.0-alpha.23",
     "react": "18.2.0",
